# pyqcloud-sdk

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: publish.yml
examples/: get_cvm.py  test.py
scripts/: get_api_info.sh
src/pyqcloud_sdk/: __init__.py  base.py  config.py  exceptions.py  logging.py  services.py
src/pyqcloud_sdk/data/: endpoints_3.0.1182.json
tests/: __init__.py  test_config.py  test_logging.py
